# acul

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: hashmap.cpp  smart_ptr.cpp  string.cpp
include/acul/: api.hpp  bin_stream.hpp  bit.hpp  comparator.hpp  deque.hpp  disposal_queue.hpp  enum.hpp  event.hpp  exception.hpp  forward_list.hpp  hash.hpp  hashset.hpp  ipc.hpp  isa.hpp  iterator.hpp  list.hpp  locales.hpp  log.hpp  lut_table.hpp  map.hpp  math.hpp  memory.hpp  meta.hpp  op_result.hpp  pair.hpp  point2d.hpp  queue.hpp  scalars.hpp  set.hpp  shared_mutex.hpp  simd.hpp  stream.hpp  string.hpp  string_pool.hpp  task.hpp  type_traits.hpp  vector.hpp
include/acul/backend/: buffer.hpp  descriptors.hpp  device.hpp  pipeline.hpp  pool.hpp
include/acul/exception/: exception.hpp  utils.hpp
include/acul/functional/: function.hpp  unique_function.hpp
include/acul/fwd/: functional.hpp  sstream.hpp  string.hpp  string_pool.hpp  string_view.hpp  string_view_pool.hpp
include/acul/gpu/: buffer.hpp  descriptors.hpp  device.hpp  pipeline.hpp  pool.hpp  utils.hpp  vector.hpp
include/acul/hash/: hashmap.hpp  hashset.hpp  hl_hashmap.hpp  hl_hashset.hpp  utils.hpp
include/acul/io/: file.hpp  jatc.hpp  path.hpp
include/acul/locales/: locales.hpp
include/acul/math/: math.hpp  types.hpp
include/acul/memory/: alloc.hpp  destructible.hpp  paos.hpp  proxy.hpp  smart_ptr.hpp
include/acul/simd/: simd.hpp
include/acul/string/: base.hpp  refstring.hpp  sstream.hpp  string.hpp  string_pool.hpp  string_view.hpp  string_view_pool.hpp  utils.hpp
include/astl/: basic_types.hpp  comparator.hpp  deque.hpp  enum.hpp  hash.hpp  hashset.hpp  list.hpp  map.hpp  memory.hpp  point2d.hpp  queue.hpp  scalars.hpp  set.hpp  shared_mutex.hpp  stream.hpp  string.hpp  type_traits.hpp  vector.hpp
include/backend/: buffer.hpp  descriptors.hpp  device.hpp  pipeline.hpp  pool.hpp  utils.hpp
include/core/: api.hpp  command_pool.hpp  descriptors.hpp  disposal_queue.hpp  event.hpp  exception.hpp  hash.hpp  locales.hpp  log.hpp  math.hpp  mem.hpp  meta.hpp  pipeline.hpp  task.hpp  utils.hpp
include/core/backend/: buffer.hpp  command_pool.hpp  descriptors.hpp  device.hpp  fence_pool.hpp  pipeline.hpp
include/core/crc32/: crc32.hpp
include/core/device/: device.hpp  utils.hpp
include/core/event/: event.hpp
include/core/file/: file.hpp
include/core/io/: file.hpp  jatc.hpp
include/core/mem/: allocator.hpp  buffer.hpp  mem.hpp
include/core/std/: array.hpp  basic_types.hpp  comparator.hpp  darray.hpp  enum.hpp  forward_list.hpp  hash.hpp  list.hpp  memory.hpp  shared_mutex.hpp  stream.hpp  string.hpp  string_pool.hpp  traits.hpp  type_traits.hpp  types@basic.hpp  vector.hpp
include/io/: file.hpp  jatc.hpp
modules/vma-impl/: CMakeLists.txt
simd/: CMakeLists.txt
simd/src/: __simd_avx2_crc32.cpp  __simd_avx2_file.cpp  __simd_avx_crc32.cpp  __simd_sse42_crc32.cpp  __simd_sse42_file.cpp  init.cpp
src/: __os_linux_ipc.cpp  __os_linux_shared_mutex.cpp  __os_win32_dllmain.cpp  __os_win32_exception.cpp  __os_win32_ipc.cpp  __simd_avx2_file.cpp  __simd_nopclmul_hash.cpp  __simd_sse42_file.cpp  __simd_sse42_math.cpp  disposal_queue.cpp  event.cpp  file.cpp  hash_avx.cpp  hash_avx512.cpp  hash_sse.cpp  isa.cmake  isa.cpp  locales.cpp  log.cpp  math.cpp  mem.cpp  meta.cpp  shared_mutex_hint.cpp_  task.cpp
src/acul/: __os_linux_shared_mutex.cpp  __os_win32_exception.cpp  __os_win32_shared_mutex.cpp  __simd_avx2_hash.cpp  disposal_queue.cpp  exception.cpp  locales.cpp  log.cpp  math.cpp  meta.cpp  simd.cpp  string.cpp  task.cpp
src/acul/backend/: buffer.cpp  descriptors.cpp  device.cpp  pipeline.cpp  utils.cpp
src/acul/exception/: __os_linux_elf_core.cpp  __os_linux_elf_read.cpp  __os_linux_exception.cpp  __os_linux_stack_dwarf.cpp  __os_win32_exception.cpp  elf_read.hpp  exception.cpp
src/acul/gpu/: descriptors.cpp  device.cpp  pipeline.cpp  utils.cpp
src/acul/hash/: __simd_avx2_utils.cpp  __simd_avx_utils.cpp  __simd_nosimd_utils.cpp  __simd_sse42_utils.cpp  crc32_avx.cpp  crc32_avx2.cpp  crc32_nosimd.cpp  crc32_sse42.cpp  utils.cpp
src/acul/io/: __os_linux.file.cpp  __os_linux_file.cpp  __os_win32_file.cpp  __simd_avx2_file.cpp  __simd_nosimd_file.cpp  __simd_sse42_file.cpp  file.cpp  jatc.cpp  (+1 more)
src/astl/: __os_linux_shared_mutex.cpp  __os_win32_shared_mutex.cpp  string.cpp
src/backend/: buffer.cpp  command_pool.cpp  descriptors.cpp  device.cpp  fence_pool.cpp  pipeline.cpp  utils.cpp
src/core/: __os_win32_exception.cpp  __simd_avx2_hash.cpp  command_pool.cpp  descriptors.cpp  locales.cpp  log.cpp  math.cpp  meta.cpp  pipeline.cpp  task.cpp
src/crc32/: crc32.cpp
src/crc32/avx512@pclmulqdq/: CMakeLists.txt  crc32@impl.cpp
src/crc32/sse42/: CMakeLists.txt  crc32@impl.cpp
src/crc32/sse42@pclmulqdq/: CMakeLists.txt  crc32@impl.cpp
src/device/: device.cpp  utils.cpp
src/event/: event.hpp
src/exception/: __os_linux_elf_core.cpp  __os_linux_elf_read.cpp  __os_linux_exception.cpp  __os_win32_exception.cpp  exception.cpp
src/hash/: crc32_avx.cpp  crc32_avx2.cpp  crc32_scalar.cpp  crc32_sse42.cpp  utils.cpp
src/io/: __simd_avx2_file.cpp  file.cpp  jatc.cpp  path.cpp
src/mem/: allocator.cpp  mem.cpp
src/std/: __os_win32_shared_mutex.cpp  __simd_avx2_hash.cpp  __simd_nopclmul_hash.cpp  __simd_sse42_hash.cpp  array.hpp  comparator.hpp  darray.cpp  forward_list.cpp  list.cpp  stream.cpp  string.cpp  string.hpp
src/string/: string_avx2.cpp  string_scalar.cpp  string_sse42.cpp  utils.cpp
src/vma/: CMakeLists.txt  vma.cpp
tests/: CMakeLists.txt  comparator.cpp  disposal_queue.cpp  event.cpp  exception.cpp  flags.cpp  forward_list.cpp  functional.cpp  hash.cpp  hash_utils.cpp  hashmap.cpp  hashmap_common.hpp  hashset.cpp  hashset_common.hpp  hl_hashmap.cpp  hl_hashset.cpp  isa.cpp  list.cpp  locales.cpp  log.cpp  math.cpp  memory.cpp  meta.cpp  shared_mutex.cpp  stream.cpp  string.cpp  task.cpp  type_traits.cpp  vector.cpp
tests/gpu/: buffer.cpp  descriptors.cpp  device.cpp  gpu.cpp  pipeline.cpp  utils.cpp  vector.cpp
tests/io/: file.cpp  jatc.cpp  path.cpp
(+61 files in other folders)
